--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "postcss": "^7.0.27",
-    "postcss-values-parser": "^3.2.0"
+    "postcss-values-parser": "^5.0.0"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "postcss-tape": "^5.0.2",
+    "postcss": "^8.0.5",
+    "postcss-tape": "^6.0.0",
     "pre-commit": "^1.2.2",
     "rollup": "^2.7.2",
     "rollup-plugin-babel": "^4.4.0"
